--- a/bootstrap/css/indexcss.css
+++ b/bootstrap/css/indexcss.css
@@ -21,7 +21,7 @@
 	filter: alpha(opacity=0);
 }
 .titre{
-    background: red;
+    background: lightskyblue;
     height: 50px;
     font-size: 30px;
     border-top-right-radius: 4px;
@@ -29,6 +29,12 @@
 }
 .titre_label{
     margin-left: 15px;
+}
+.logo_titre{
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-left: 10px;
 }
 .image-preview-input-title {
     margin-left:2px;
@@ -74,7 +80,7 @@
 }
 .w3-container{
     background: lightblue;
-    height: 380px;
+    height: 400px;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
 }
@@ -118,7 +124,7 @@
 } 
 .recherche{
     height: 200px;
-    margin-top: 70px;
+    margin-top: 100px;
 }
 /* .affichage_mot{
     background: lightgreen;
@@ -175,4 +181,13 @@
 }
 .affichage_zone_texte{
     margin-top: 15px;
+}
+.zone_text{
+    height: 100px;
+}
+.text_temps_mot{
+    width: 100%;
+}
+.local{
+    margin-top: 10px;
 }
