--- a/bootstrap/css/indexcss.css
+++ b/bootstrap/css/indexcss.css
@@ -103,11 +103,11 @@
 .formulaire_retour{
     border: 2px solid;
     border-radius: 4px;
-    height: 650px;
+    height: 720px;
     margin-top: 40px;
 }
 .form_retour{
-    height: 700px;
+    height: 780px;
 }
 .affichage{
     height: 400px;
@@ -116,12 +116,13 @@
 .affichage_texte{
     width:60%;
     margin: auto;
-} 
+}
+/* 
  .zone_text{
     width: 100%;
     height: 50px;
     vertical-align: text-top;
-} 
+} */
 .recherche{
     height: 200px;
     margin-top: 100px;
@@ -184,10 +185,19 @@
 }
 .zone_text{
     height: 100px;
+	width: 100%;
 }
 .text_temps_mot{
     width: 100%;
 }
 .local{
     margin-top: 10px;
+}
+.vid{
+	height: 196px;
+	width: 386px;
+}
+.video{
+	width:100%;
+	height:100%;
 }
