--- a/bootstrap/css/indexcss.css
+++ b/bootstrap/css/indexcss.css
@@ -103,11 +103,16 @@
 .formulaire_retour{
     border: 2px solid;
     border-radius: 4px;
-    height: 720px;
+    height: 820px;
     margin-top: 40px;
 }
 .form_retour{
-    height: 780px;
+    height: 100%;
+    background: lightblue;
+	margin-top: -40px;
+	width: 95%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .affichage{
     height: 400px;
@@ -125,18 +130,18 @@
 } */
 .recherche{
     height: 200px;
-    margin-top: 100px;
+    margin-top: 250px;
 }
 /* .affichage_mot{
     background: lightgreen;
     height: 30px;
 } */
 .affichage_texte{
-    margin-top: 50px;
+    margin-top: 150px;
 }
 .miniature{
-    height: 196px;
-    width: 346px;
+    height: 220px;
+    width: 600px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
@@ -200,4 +205,8 @@
 .video{
 	width:100%;
 	height:100%;
+}
+.@media (min-width: 992px)
+.col-md-8 {
+    width: 100%;
 }
